--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap');
+
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
 
 body{ 
-    font-family: 'Nunito', sans-serif;
+    font-family: 'DM Sans', sans-serif;
 }
 
 
